--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -1,8 +1,44 @@
-body {
+@media (min-width:320px) {
+  Body{background: grey;}
+  header{
+    height: 100px;
+  }
+  .logo{ 
+    width: 80px;     
+    height: 40px;
+    margin: 0px;
+  } 
+  nav> a {
+     width: 100%;
+     height: 25px;
+     padding: 0px;
+     font-size: 10px;
+     letter-spacing: 0px;
+  } 
+  .has-border{
+    width: 100%;
+    height: 25px;
+    padding: 0px;
+    font-size: 10px;
+    letter-spacing: 0px;
+  }
+  #profile-pic{
+    width: 200px;
+    height: 200px;
+    padding-left: 5px;
+    }
+  }
+@media(min-width: 768px) {
+    body{color:red;}
+    .logo{width: 70px}
+  
+  }
+@media(min-width: 992px)
+  {body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(colosseum-interior.jpg);
     background-repeat: no-repeat;
-    background-size: inherit;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
   }
@@ -15,8 +51,8 @@ body {
   
   header {
     display: grid;
-    grid-template-columns: 40% 60%;
     width: 100%;
+    grid-template-columns: 40%, 60%;
   }
   
   main {
@@ -93,3 +129,5 @@ body {
     letter-spacing: 1px;
     font-style: italic;
   }
+}
+ 
