--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -14,20 +14,13 @@
      padding: 0px;
      font-size: 10px;
      letter-spacing: 0px;
-  } 
-  .has-border{
-    width: 100%;
-    height: 25px;
-    padding: 0px;
-    font-size: 10px;
-    letter-spacing: 0px;
+  }
   }
   #profile-pic{
     width: 200px;
     height: 200px;
     padding-left: 5px;
     }
-  }
 @media(min-width: 768px) {
     body{color:red;}
     .logo{width: 70px}
@@ -47,12 +40,13 @@
     width: 30%;
     height: 80%;
     margin: 3% 10%;
+    grid-column: 1/2;
   }
   
   header {
     display: grid;
     width: 100%;
-    grid-template-columns: 40%, 60%;
+    grid-template-columns: 40% 60%;
   }
   
   main {
@@ -74,6 +68,7 @@
     padding: 20px; 
     text-align: center;
     border: 2px solid white;
+    grid-column: 2/3;
   }
   
   .has-border {
