--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -2,6 +2,7 @@
   Body{background: grey;}
   header{
     height: 100px;
+    grid-template-columns:40% 60% ;
   }
   .logo{ 
     width: 80px;     
@@ -14,6 +15,7 @@
      padding: 0px;
      font-size: 10px;
      letter-spacing: 0px;
+     grid-column: 2/3;
   }
   }
   #profile-pic{
@@ -38,7 +40,7 @@
   
   .logo {
     width: 30%;
-    height: 80%;
+    height: 60%;
     margin: 3% 10%;
     grid-column: 1/2;
   }
