--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -28,8 +28,8 @@
     .logo{width: 70px}
   
   }
-@media(min-width: 992px)
-  {body {
+@media(min-width: 992px){
+  body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(colosseum-interior.jpg);
     background-repeat: no-repeat;
