--- a/myPortfolio/src/styles/style.css
+++ b/myPortfolio/src/styles/style.css
@@ -31,7 +31,7 @@
 @media(min-width: 992px){
   body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(colosseum-interior.jpg);
+    background-image: url(/myPortfolio/src/img/colosseum-interior.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
