--- a/myPortfolio/src/styles/Dashboard-styles.css
+++ b/myPortfolio/src/styles/Dashboard-styles.css
@@ -8,7 +8,7 @@ html {
     padding: 0;
     box-sizing: inherit;
   }
-  body{ background-image: url(/myPortfolio/src/img/dashboard_background.jpg);}
+  body{background-image: url(/LCA_web101_Garrett_Robertson/myPortfolio/src/img/dashboard_background.jpg);}
 /* main{
     display: grid;
     height: 100%;
@@ -139,6 +139,27 @@ html {
       grid-area:TO-DO;
       display: grid;
       width: 100%;
+  }
+  #newItemButton{
+    grid-area:TO-DO;
+    width: 100%;
+  }
+  li {
+    height: 60px;
+    background-color: #fff;
+    border-radius: 3px;
+    border: 1px solid #c4c4c4;
+    background-color: transparent;
+    font-size: 2rem;
+    color: #333;
+    background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
+    text-shadow: 0 1px rgba(255,255,255,.4);
+    color: rgb(123, 255, 0) ;
+    text-align: center;
+  }
+  li:hover{
+    background-color: black;
   }
   @media(min-width: 320px){
     main{
